--- a/Fysio WebApplication/Views/MedicalFile/Appointment.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Appointment.cshtml
@@ -5,6 +5,10 @@
 }
 <h1 class="text-center">Appointment patient</h1>
 <hr/>
+
+
+<div class="card col-md-5">
+    <div class="card-body">
 <div>
     <dl class="row">
         <dt class="col-sm-2">
@@ -36,3 +40,5 @@
 <div>
     <a href="javascript:history.go(-1)">Back</a>
 </div>
+
+            </div></div>
