--- a/Fysio WebApplication/Views/MedicalFile/TreatmentPlan.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/TreatmentPlan.cshtml
@@ -6,7 +6,10 @@
 
 <h1 class="text-center">Treatment plan</h1>
 <hr/>
-<table class="table">
+<div class="card">
+    <div class="card-body">	
+
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -73,3 +76,5 @@
 }
     </tbody>
 </table>
+</div>
+</div>
