--- a/Fysio WebApplication/Views/Shared/_Layout.cshtml
+++ b/Fysio WebApplication/Views/Shared/_Layout.cshtml
@@ -49,7 +49,7 @@
                                         {
                                             <a class="dropdown-item" href="/Patient">Patient</a>
                                             <a class="dropdown-item" href="/MedicalFile">MedicalFile</a>
-                                            <a class="dropdown-item" href="/Auth/RegisterEmployee">Register Employee</a>
+                                            @*<a class="dropdown-item" href="/Auth/RegisterEmployee">Register Employee</a>*@
                                             <a class="dropdown-item" href="/Auth/RegisterPatient">Register Patient</a>
                                             <a class="dropdown-item" href="/Appointment/Availability">Availability</a>
                                         }
@@ -87,7 +87,7 @@
     <br />
     <br />
     <br />
-    <footer class="border-top footer text-muted">
+    <footer style="background-color: #fff" class="border-top footer text-muted">
         <div class="container">
             &copy; @DateTime.Now.Year - Fysio_WebApplication
         </div>
