--- a/Fysio WebApplication/Views/Appointment/Availability.cshtml
+++ b/Fysio WebApplication/Views/Appointment/Availability.cshtml
@@ -6,11 +6,14 @@
 
 <hr />
 
-<form id="Availabilty" method="post">
+
+
+<div class="card col-md-6">
+    <div class="card-body">
+        <form id="Availabilty" method="post">
     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
     <div class="row">
         <div class="col-md-6">
-            <hr />
             <div class="form-group">
                 <label asp-for="@Model.DateStart"></label>
                 <input type="date" asp-for="@Model.DateStart" class="form-control" autocomplete="given-name" aria-required="true" />
@@ -23,7 +26,6 @@
             </div>
         </div>
         <div class="col-md-6">
-            <hr />
             <div class="form-group">
                 <label asp-for="@Model.DateTimeStart"></label>
                 <input type="time" pattern="[0-9]{2}:[0-9]{2}" min="08:00" max="17:30" step="180000000000" asp-for="@Model.DateTimeStart" class="form-control" autocomplete="given-name" aria-required="true" />
@@ -36,9 +38,11 @@
             </div>
         </div>
     </div>
+    <hr/>
     <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
 </form>
-
+</div>
+</div>
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
 }
