--- a/Fysio WebApplication/Views/Auth/AccountIndex.cshtml
+++ b/Fysio WebApplication/Views/Auth/AccountIndex.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Core.DomainModel.Employee
 
 @{
-    ViewData["Title"] = "View Employee";
+    ViewData["Title"] = "Account information";
 }
 
 <h1 class="text-center">@ViewData["Title"]</h1>
@@ -9,8 +9,6 @@
 <hr />
 
 <div>
-    <h4>@ViewData["Title"]</h4>
-    <hr />
     <div class="card">
         <div class="card-body">
             <h5 class="card-title">@Html.DisplayFor(model => model.ApplicationUser.FirstName) @Html.DisplayFor(model => model.ApplicationUser.SurName)</h5>
