--- a/Fysio WebApplication/Views/Auth/Login.cshtml
+++ b/Fysio WebApplication/Views/Auth/Login.cshtml
@@ -6,8 +6,11 @@
 <h1 class="text-center">@ViewData["Title"]</h1>
 
 <hr />
+
+<div class="card col-md-4">
+    <div class="card-body">	
 <div class="row">
-    <div class="col-md-4">
+    <div>
         <section>
             <form id="account" method="post">
                 <h2>Use your account to log in.</h2>
