--- a/Fysio WebApplication/Views/MedicalFile/AddRoomTreatment.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/AddRoomTreatment.cshtml
@@ -6,6 +6,9 @@
 
 <h1 class="text-center">Add room to treatment</h1>
 <hr/>
+
+<div class="card col-md-5">
+    <div class="card-body">
 <div class="row">
     <div class="col-md-4">
         <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
@@ -25,7 +28,8 @@
 <div>
     <a href="javascript:history.go(-1)">Back</a>
 </div>
-
+</div>
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
