--- a/Fysio WebApplication/Views/MedicalFile/Create.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Create.cshtml
@@ -6,42 +6,51 @@
 
 <h1 class="text-center">Create medical file</h1>
 <hr/>
-<div class="row">
-    <div class="col-md-4">
-        <form action="/MedicalFile/Create" method="post" novalidate="novalidate">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Diagnose</label>
-                <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)">
-                    <!--Not for edit:-->
-                    <option disabled selected>Please select one</option>
-                </select>
-                <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfDischarge" class="control-label"></label>
-                <input asp-for="DateOfDischarge" class="form-control" />
-                <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PatientEmail" class="control-label"></label>
-                <input asp-for="PatientEmail" class="form-control" />
-                <span asp-validation-for="PatientEmail" class="text-danger"></span>
-            </div>
-            <hr />
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<div class="card col-md-4">
+    <div class="card-body">
+        <div class="row">
+            <div class="">
+                <form action="/MedicalFile/Create" method="post" novalidate="novalidate">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <label class="control-label">Diagnose</label>
+                        <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)">
+                            <!--Not for edit:-->
+                            <option disabled selected>Please select one</option>
+                        </select>
+                        <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <label asp-for="DateOfDischarge" class="control-label"></label>
+                        <input asp-for="DateOfDischarge" class="form-control" />
+                        <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
+                    </div>
+                    <br/>
+                    <div class="form-group">
+                        <label asp-for="PatientEmail" class="control-label"></label>
+                        <input asp-for="PatientEmail" class="form-control" />
+                        <span asp-validation-for="PatientEmail" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
 
-<div>
-    <a href="javascript:history.go(-1)">Back</a>
+                <div>
+                    <br/>
+                    <a href="javascript:history.go(-1)">Back</a>
+                </div>
+
+            </div>
+        </div>
+    </div>
 </div>
 
