--- a/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/Edit.cshtml
@@ -6,35 +6,44 @@
 
 <h1 class="text-center">Edit medicalfile</h1>
 <hr/>
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label class="control-label">Diagnose</label>
-                <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)"></select>
-                <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfDischarge" class="control-label"></label>
-                <input asp-for="DateOfDischarge" class="form-control" />
-                <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
 
-<div>
-    <a href="javascript:history.go(-1)">Back</a>
-</div>
+
+<div class="card col-md-4">
+    <div class="card-body">
+        <div class="row">
+            <div class="">
+                <form asp-action="Edit">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <label class="control-label">Diagnose</label>
+                        <select class="form-control" asp-for="DiagnosisCode" asp-items="@(ViewBag.Diagnoses)"></select>
+                        <span asp-validation-for="DiagnosisCode" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <label asp-for="DateOfDischarge" class="control-label"></label>
+                        <input asp-for="DateOfDischarge" class="form-control" />
+                        <span asp-validation-for="DateOfDischarge" class="text-danger"></span>
+                    </div>
+                    <br />
+                    <div class="form-group">
+                        <input type="submit" value="Save" class="btn btn-primary" />
+                    </div>
+                </form>
+            </div>
+        </div>
+        <br />
+        <div>
+            <a href="javascript:history.go(-1)">Back</a>
+        </div>
+        </div>
+   </div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
