--- a/Fysio WebApplication/Views/MedicalFile/NotesNew.cshtml
+++ b/Fysio WebApplication/Views/MedicalFile/NotesNew.cshtml
@@ -6,29 +6,35 @@
 
 <h1 class="text-center">Create new note</h1>
 <hr/>
-<div class="row">
-    <div class="col-md-4">
-        <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="OpenForPatient" /> @Html.DisplayNameFor(model => model.OpenForPatient)
-                </label>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<div class="card col-md-4">
+    <div class="card-body">
+        <div class="row">
+            <div class="">
+                <form action="@Html.Raw(ViewBag.Url)" method="post" novalidate="novalidate">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <div class="form-group">
+                        <label asp-for="Description" class="control-label"></label>
+                        <input asp-for="Description" class="form-control" />
+                        <span asp-validation-for="Description" class="text-danger"></span>
+                    </div>
+                    <div class="form-group form-check">
+                        <label class="form-check-label">
+                            <input class="form-check-input" asp-for="OpenForPatient" /> @Html.DisplayNameFor(model => model.OpenForPatient)
+                        </label>
+                    </div>
+                    <div class="form-group">
+                        <br />
+                        <input type="submit" value="Create" class="btn btn-primary" />
+                    </div>
+                </form>
+             </div>
+        </div>
 
-<div>
-    <a href="javascript:history.go(-1)">Back</a>
+        <div>
+            <br/>
+            <a href="javascript:history.go(-1)">Back</a>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
