--- a/Fysio WebApplication/Views/TreatmentPlan/Create.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Create.cshtml
@@ -4,10 +4,12 @@
     ViewData["Title"] = "Create";
 }
 
-<h1 class="text-center">Create</h1>
+<h1 class="text-center">Create treatmentplan</h1>
 
-<h4>TreatmentPlan</h4>
 <hr />
+
+<div class="card col-md-7">
+    <div class="card-body">
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
@@ -49,6 +51,8 @@
 
 <div>
     <a href="javascript:history.go(-1)">Back</a>
+</div>
+</div>
 </div>
 
 @section Scripts {
