--- a/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Details.cshtml
@@ -4,67 +4,77 @@
     ViewData["Title"] = "Detail";
 }
 
-<h1 class="text-center">Detail</h1>
+<h1 class="text-center">Detail treatmentplan</h1>
 
+<hr />
+
+
+<div class="card col-md-7">
+    <div class="card-body">
 <div>
-    <h4>TreatmentPlan</h4>
-    <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class = "col-md-4">
             @Html.DisplayNameFor(model => model.Type)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Html.DisplayFor(model => model.Type)
         </dd>
-        <dt class="col-sm-2">
+        <hr/>
+        <dt class="col-md-4">
             Treatment
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-8">
             @ViewBag.Description
-        </dd>
-        <dt class="col-sm-2">
+                </dd>
+                <hr />
+        <dt class="col-md-4">
             Explanation Required
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-8">
             @ViewBag.ExplanationRequired
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
+                </dd>
+                <hr />
+        <dt class = "col-md-4">
+            Description
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
+                </dd>
+                <hr />
+        <dt class = "col-md-4">
             @Html.DisplayNameFor(model => model.Particularities)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Html.DisplayFor(model => model.Particularities)
-        </dd>
-        <dt class = "col-sm-2">
+                </dd>
+                <hr />
+        <dt class = "col-md-4">
             Performed By
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Model.TreatmentPerformedBy.ApplicationUser.FirstName @Model.TreatmentPerformedBy.ApplicationUser.SurName
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TreatmentDate)
+                </dd>
+                <hr />
+        <dt class = "col-md-4">
+            Treatment Date
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Html.DisplayFor(model => model.TreatmentDate)
-        </dd>
-        <dt class = "col-sm-2">
+                </dd>
+                <hr />
+        <dt class = "col-md-4">
             Treatments per week
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-md-8">
             @Html.DisplayFor(model => model.AmountOfTreatmentsPerWeek)
-        </dd>
-        <dt class="col-sm-2">
+                </dd>
+                <hr />
+        <dt class="col-md-4">
             Room
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-md-8">
             @Html.DisplayFor(model => model.PracticeRoom.Name)
         </dd>
-        
     </dl>
 </div>
 <div>
@@ -73,4 +83,7 @@
         @Html.ActionLink("Edit | ", "Edit", new { id = Model.Id })
     }
     <a href="javascript:history.go(-1)">Back</a>
+</div>
+
+            </div>
 </div>
