--- a/Fysio WebApplication/Views/TreatmentPlan/Index.cshtml
+++ b/Fysio WebApplication/Views/TreatmentPlan/Index.cshtml
@@ -4,12 +4,15 @@
     ViewData["Title"] = "Index";
 }
 
-<h1 class="text-center">Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<h1 class="text-center">Create treatmentplan</h1>
+
+<hr />
+
+
+<div class="card">
+    <div class="card-body">
+<table class="table table-striped">
     <thead>
         <tr>
             <th>
@@ -57,7 +60,7 @@
             <td>
                 @if (User.HasClaim("UserType", "Employee") || User.HasClaim("UserType", "Student"))
                 {
-                    @Html.ActionLink("Edit", "Edit", new { id=item.Id  })
+                    @Html.ActionLink("Edit", "Edit", new { id=item.Id  }) 
                 }
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) 
             </td>
@@ -65,3 +68,6 @@
     }
     </tbody>
 </table>
+
+</div>
+</div>
